--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <h1>📄 Download Your PDF</h1>
     <p>Click the button below to download the sample PDF file:</p>
-    <a href="files/sample.pdf" download class="download-btn">⬇️ Download PDF</a>
+    <a href="sample.pdf" download class="download-btn">⬇️ Download PDF</a>
   </div>
 </body>
 </html>
